# sparta17_data11_final_project

./: README.md  RULES.md  main.py  pyproject.toml
notebooks/JUH/: README.md  requirements.txt  starseed_통계.ipynb  위성점수계산.ipynb
notebooks/JUH/07_code/: config.py  run_pipeline.py
notebooks/JUH/07_code/pipeline/: step2_append_refresh_video_master.py  step2_build_growth_proxy_from_master.py  step2_collect_candidates.py  step2_merge_refresh_into_candidates.py  step2_prepare_candidates.py  (+7 more)
notebooks/KSI/: x_hashtag_scraper_async_final.ipynb  x_hashtag_scraper_final.py
notebooks/KSI/02.EDA/: 01_EDA(SUIM).ipynb
notebooks/KSI/03.세그먼트/: 01.1단계 세그먼트_3번.ipynb  01.1단계 세그먼트_4번.ipynb  01.1단계_세그먼트_4번(슈퍼노바)_최종.ipynb  01.1단계_세그먼트_4번_최종버전.ipynb
notebooks/KSI/04.분석결과/: 260508_세그먼트_통합정리본.ipynb
notebooks/KSI/05.대시보드/: app.py
notebooks/LSB/: dataset1.ipynb  fan_cafe.py  final_soft_merge.ipynb  main.py  preprocessing_LSB.ipynb  test.ipynb
notebooks/MDH/: 260415_crawling.ipynb  260420_crawling.ipynb  260423_crawling.ipynb  260427_crawling.ipynb  260428_naver_cafe.ipynb  260505_segment.ipynb  260508_comet_segment.ipynb  260508_segment.ipynb  260508_visualization.ipynb  app.py  collect_fancafe.py  collect_youtube_from_broadcast.py  eda_dahyun.ipynb  fan_cafe.py  final_soft_merge.ipynb  main.py  movie_detail.ipynb  run_crawling.py  soop_poong.ipynb
notebooks/OHC/: ML임시.ipynb  OHC_코드취합.ipynb  Ptest.ipynb  README.md  Xtest.ipynb  accounts.db  agent.py  cheeze_ML.ipynb  cookies.json  fcftest.ipynb  fin_merge.ipynb  final_soft_merge.ipynb  idol2.ipynb  main.py  session.json  test.txt
(+17 files in other folders)
