[project]
name = "sparta17-data11-final-project"
version = "0.1.0"
description = "Final practical data project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "catboost>=1.2.10",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pingouin>=0.6.0",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "statsmodels>=0.14.6",
    "webdriver-manager>=4.0.2",
    "xgboost>=3.2.0",
]
